[package]
name = "ouesu"
version = "0.1.1"
edition = "2021"
authors = ["eclair-montague"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.9.2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
build-command = ["xbuild"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]